# agnr-ml

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-publish.yml  python-test.yml  rust.yml  test.yml
agnr_ml/: __init__.py
generation/: Cargo.toml
generation/src/adjacency/graph/: compressed.rs  edge.rs  mod.rs
generation/src/generate/: mod.rs  spec.rs
generation/src/generate/spec/: temp.rs
generation/src/structure/: mod.rs
rsp2/src/potentials/tests/resources/rebo/: generate.py  make-expected
scripts/: test-all.sh
src/: lib.rs
src/adjacency/: mod.rs
src/agnr/: generation.rs  mod.rs  spec.rs
src/generate/: spec.rs
src/structure/: mod.rs  poscar.rs
tests/: test_agnr.py
tests/resources/dynmat-at-q/: settings.yaml
