[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
manylinux = "2010"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pymatgen.*:",
    "ignore::DeprecationWarning:past.*:",
]
# this is needed to avoid accidental import of
# agnr_ml when running non-development tests
addopts = "--import-mode=importlib"
